@@ -6,7 +6,7 @@
  * 
  * Software distributed under the License is distributed on an "AS
  * IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
- * implied. See the License for the specific language governing
+ * implied. See theL icense for the specific language governing
  * rights and limitations under the License.
  * 
  * The Original Code is MPEG4IP.
